# ClusterMerger

./: CMakeLists.txt  README.md  easy_build_and_compile.sh  setup.sh
includes/: cluster_merger.h  disjoint_merger.h  graph.h  weighted_merger.h
src/: cluster_merger.cpp  disjoint_merger.cpp  graph.cpp  main.cpp  weighted_merger.cpp
